    - Continued fixing and improving the factoriopedia.
    - Fixed some recipes and technologies using old, extremely old icons.
    - Fixed caesium antimony to chloride having the wrong icon.
    - Fixed heat exchanger 1 being worse then it should be.
    - Fixed heat exchanger 2 not producing the correct temp steam.
    - Fixed steam turbines not being able to take higher temp steam.

---------------------------------------------------------------------------------------------------
Version: 0.6.514
Date: 2025-31-07
  The i'll be able to sit down one day and not have to update the public build Update:

  Changes:
    - Changed P-TM science to use thallium plates, not ore to match with tungsten/titanium.
    - Changed empty canister stack sizes to match the highest stacking fuel canister (50 > 150).
    - Changed spent/empty fuel rod stack sizes to match their fuel counterparts.
    - Doubled stack size of octane fuel canisters.

---------------------------------------------------------------------------------------------------
Version: 0.6.513
Date: 2025-30-07
  The one step forward, two steps inbetween to make sure the first step actually happened Update:

  Changes:
    - Changed reactors to not use the coolant code that was causing the crashes, it will return though <3

  Fixes:
    - Moved hot coolant cooling recipe to crystallisation technology, and hot light coolant cooling to temperature-inator 3's.
    - Fixed gem sorting outputing too much hot coolant.
    - Fixed radium not outputting hot coolant.

---------------------------------------------------------------------------------------------------
Version: 0.6.512
Date: 2025-29-07
  The "why dont you just do [fucking obvious alternative]?" Update:

  Additions:
    - Added Schalls Uranium compatability!

  Changes:
    - Changed all crystallizer recipes to use coolant in their recipes, and lets them output hot coolant.
    - Lowered the amount of P-TM ore needed for gallium chunks from 12 to 10.