@@ -1771,6 +1771,7 @@ pm-advanced-coke-processing=Advanced coke processing
 pm-experimental-research-data=Experimental research data
 pm-advanced-electric-engine-unit=Advanced electric engine unit
 pm-advanced-modules=Advanced modules
+pm-naptha-fuel-canisters=Naptha fuel canisters
 
 pm-ferric-chloride-processing=Ferric chloride processing
 pm-advanced-chlorine-processing=Advanced chlorine processing
@@ -1960,6 +1961,7 @@ pm-lithium-battery-mk2-equipment=Advanced machinery to store energy for modular 
 pm-selenium-battery-equipment=Advanced machinery to store energy for modular equipment.
 pm-advanced-electric-engine-unit=A more advanced way to turn energy into mechanical motion.
 pm-advanced-modules=Advanced materials being used in upgrade modules allows for stronger effects.
+pm-naptha-fuel-canisters=A fuel canister better designed for being used in machines, rather then engines.
 
 pm-ferric-chloride-processing=A compound of a ferrous metal and chlorine, used in cleaning waste water or acidic processes.
 pm-advanced-chlorine-processing=A more sophisticated way of making Hydrochloric acid, while using.. no chlorine.
